--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ header {
   margin-bottom: 63px;
 }
 
+#cards {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
 .card {
   padding: 32px 23px;
   text-align: center;
