--- a/style.css
+++ b/style.css
@@ -4,15 +4,37 @@
   box-sizing: border-box;
 }
 
+:root {
+  --card-color-title-border: #746615;
+  --card-color-primary: #f7dd43;
+  --card-color-bg: #1d1c19;
+  --bg: url(./assets/bg-yellow.svg);
+}
+
+body.blue {
+  --card-color-title-border: #338af3;
+  --card-color-primary: #338af3;  
+  --card-color-bg: #202024;
+  --bg: url(./assets/bg-blue.svg);
+}
+
+body.green {
+  --card-color-title-border: #047c3f;
+  --card-color-primary: #047c3f;  
+  --card-color-bg: #1a1f1b;
+  --bg: url(./assets/bg-green.svg);
+}
+
 ul {
   list-style: none;
 }
 
 body {
   background-color: #121214;
-  background-image: url(./assets/bg.svg);
-  background-position-x: center;
-  background-position-y: 55.6%;
+  background-image: var(--bg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body * {
@@ -21,11 +43,13 @@ body * {
 
 #app {
   width: fit-content;
-  margin: 52px auto;
+  margin: auto;
+  padding-top: 52px;
 }
 
 header {
   margin-bottom: 63px;
+  text-align: center;
 }
 
 #cards {
@@ -38,8 +62,8 @@ header {
   padding: 32px 23px;
   text-align: center;
 
-  background: #1d1c19;
-  border-bottom: 2px solid #f7dd43;
+  background: var(--card-color-bg);
+  border-bottom: 2px solid var(--card-color-primary);
   border-radius: 6px;
 }
 
@@ -50,7 +74,7 @@ header {
   align-items: center;
 
   padding: 8px 16px;
-  border: 1px solid #746615;
+  border: 1px solid var(--card-color-title-border);
   border-radius: 6px;
 
   width: fit-content;
@@ -76,7 +100,7 @@ header {
 
 .card ul li {
   display: flex;
-  align-item: center;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -89,5 +113,41 @@ header {
   font-weight: 900;
   font-size: 36px;
   line-height: 125%;
+
   color: #e1e1e6;
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover {
+  transform: scale(1.1);
+}
+
+.card h2,
+.card ul li strong,
+.card ul li img {
+  transition: transform 0.3s;
+}
+
+.card {
+  opacity: 0;
+  animation: appear 1s forwards;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media (min-width: 900px) {
+  #cards {
+    max-width: 670px;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
