adicionando bottom de cores

--- a/style.css
+++ b/style.css
@@ -53,7 +53,30 @@ body * {
 
 header {
   margin-bottom: 63px;
-  text-align: center;
+  text-align: center;  
+}
+
+
+header button {
+  margin-top: 14px;
+  width: 14px;
+  height: 14px;
+
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+header .y {
+  background-color: #f7dd43;
+}
+
+header .b {
+  background-color: #338af3;
+}
+
+header .g {
+  background-color: #047c3f;
 }
 
 #cards {
